// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GroupForm Snapshot Tests matches snapshot for create form 1`] = `
<DocumentFragment>
  <form
    class="space-y-6"
  >
    <div
      class="space-y-4"
    >
      <div>
        <label
          class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
          for="name"
        >
          Nome do Grupo *
        </label>
        <input
          class="flex h-12 w-full rounded-md border border-input bg-background px-4 py-3 text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50"
          id="name"
          name="name"
          placeholder="Nome do grupo"
          required=""
          value=""
        />
      </div>
      <div>
        <label
          class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
          for="description"
        >
          Descrição
        </label>
        <textarea
          class="flex min-h-[80px] w-full rounded-md border border-input bg-transparent px-3 py-2 text-sm ring-offset-background placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50"
          id="description"
          name="description"
          placeholder="Descrição do grupo"
          rows="3"
        />
      </div>
      <input
        name="max_patients"
        type="hidden"
        value="20"
      />
      <input
        name="max_members"
        type="hidden"
        value="10"
      />
    </div>
    <div
      class="flex justify-end gap-3"
    >
      <button
        class="inline-flex items-center justify-center rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none ring-offset-background bg-primary text-primary-foreground hover:bg-primary/90 h-10 py-2 px-4"
        type="submit"
      >
        Criar Grupo
      </button>
    </div>
  </form>
</DocumentFragment>
`;

exports[`GroupForm Snapshot Tests matches snapshot for edit form 1`] = `
<DocumentFragment>
  <form
    class="space-y-6"
  >
    <div
      class="space-y-4"
    >
      <div>
        <label
          class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
          for="name"
        >
          Nome do Grupo *
        </label>
        <input
          class="flex h-12 w-full rounded-md border border-input bg-background px-4 py-3 text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50"
          id="name"
          name="name"
          placeholder="Nome do grupo"
          required=""
          value="Test Group"
        />
      </div>
      <div>
        <label
          class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
          for="description"
        >
          Descrição
        </label>
        <textarea
          class="flex min-h-[80px] w-full rounded-md border border-input bg-transparent px-3 py-2 text-sm ring-offset-background placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50"
          id="description"
          name="description"
          placeholder="Descrição do grupo"
          rows="3"
        >
          Test group description
        </textarea>
      </div>
      <input
        name="max_patients"
        type="hidden"
        value="20"
      />
      <input
        name="max_members"
        type="hidden"
        value="10"
      />
    </div>
    <div
      class="flex justify-end gap-3"
    >
      <button
        class="inline-flex items-center justify-center rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none ring-offset-background bg-primary text-primary-foreground hover:bg-primary/90 h-10 py-2 px-4"
        type="submit"
      >
        Atualizar Grupo
      </button>
    </div>
  </form>
</DocumentFragment>
`;

exports[`GroupForm Snapshot Tests matches snapshot with all custom texts 1`] = `
<DocumentFragment>
  <form
    class="space-y-6"
  >
    <div
      class="space-y-4"
    >
      <div>
        <label
          class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
          for="name"
        >
          Nome do Grupo *
        </label>
        <input
          class="flex h-12 w-full rounded-md border border-input bg-background px-4 py-3 text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50"
          id="name"
          name="name"
          placeholder="Nome do grupo"
          required=""
          value=""
        />
      </div>
      <div>
        <label
          class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
          for="description"
        >
          Descrição
        </label>
        <textarea
          class="flex min-h-[80px] w-full rounded-md border border-input bg-transparent px-3 py-2 text-sm ring-offset-background placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50"
          id="description"
          name="description"
          placeholder="Descrição do grupo"
          rows="3"
        />
      </div>
      <input
        name="max_patients"
        type="hidden"
        value="20"
      />
      <input
        name="max_members"
        type="hidden"
        value="10"
      />
    </div>
    <div
      class="flex justify-end gap-3"
    >
      <button
        class="inline-flex items-center justify-center rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none ring-offset-background bg-primary text-primary-foreground hover:bg-primary/90 h-10 py-2 px-4"
        type="submit"
      >
        Criar Grupo
      </button>
    </div>
  </form>
</DocumentFragment>
`;

exports[`GroupForm Snapshot Tests matches snapshot with custom cancel text 1`] = `
<DocumentFragment>
  <form
    class="space-y-6"
  >
    <div
      class="space-y-4"
    >
      <div>
        <label
          class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
          for="name"
        >
          Nome do Grupo *
        </label>
        <input
          class="flex h-12 w-full rounded-md border border-input bg-background px-4 py-3 text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50"
          id="name"
          name="name"
          placeholder="Nome do grupo"
          required=""
          value=""
        />
      </div>
      <div>
        <label
          class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
          for="description"
        >
          Descrição
        </label>
        <textarea
          class="flex min-h-[80px] w-full rounded-md border border-input bg-transparent px-3 py-2 text-sm ring-offset-background placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50"
          id="description"
          name="description"
          placeholder="Descrição do grupo"
          rows="3"
        />
      </div>
      <input
        name="max_patients"
        type="hidden"
        value="20"
      />
      <input
        name="max_members"
        type="hidden"
        value="10"
      />
    </div>
    <div
      class="flex justify-end gap-3"
    >
      <button
        class="inline-flex items-center justify-center rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none ring-offset-background bg-primary text-primary-foreground hover:bg-primary/90 h-10 py-2 px-4"
        type="submit"
      >
        Criar Grupo
      </button>
    </div>
  </form>
</DocumentFragment>
`;

exports[`GroupForm Snapshot Tests matches snapshot with custom submit text 1`] = `
<DocumentFragment>
  <form
    class="space-y-6"
  >
    <div
      class="space-y-4"
    >
      <div>
        <label
          class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
          for="name"
        >
          Nome do Grupo *
        </label>
        <input
          class="flex h-12 w-full rounded-md border border-input bg-background px-4 py-3 text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50"
          id="name"
          name="name"
          placeholder="Nome do grupo"
          required=""
          value=""
        />
      </div>
      <div>
        <label
          class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
          for="description"
        >
          Descrição
        </label>
        <textarea
          class="flex min-h-[80px] w-full rounded-md border border-input bg-transparent px-3 py-2 text-sm ring-offset-background placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50"
          id="description"
          name="description"
          placeholder="Descrição do grupo"
          rows="3"
        />
      </div>
      <input
        name="max_patients"
        type="hidden"
        value="20"
      />
      <input
        name="max_members"
        type="hidden"
        value="10"
      />
    </div>
    <div
      class="flex justify-end gap-3"
    >
      <button
        class="inline-flex items-center justify-center rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none ring-offset-background bg-primary text-primary-foreground hover:bg-primary/90 h-10 py-2 px-4"
        type="submit"
      >
        Criar Grupo
      </button>
    </div>
  </form>
</DocumentFragment>
`;

exports[`GroupForm Snapshot Tests matches snapshot with error state 1`] = `
<DocumentFragment>
  <form
    class="space-y-6"
  >
    <div
      class="space-y-4"
    >
      <div>
        <label
          class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
          for="name"
        >
          Nome do Grupo *
        </label>
        <input
          class="flex h-12 w-full rounded-md border border-input bg-background px-4 py-3 text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50"
          id="name"
          name="name"
          placeholder="Nome do grupo"
          required=""
          value=""
        />
      </div>
      <div>
        <label
          class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
          for="description"
        >
          Descrição
        </label>
        <textarea
          class="flex min-h-[80px] w-full rounded-md border border-input bg-transparent px-3 py-2 text-sm ring-offset-background placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50"
          id="description"
          name="description"
          placeholder="Descrição do grupo"
          rows="3"
        />
      </div>
      <input
        name="max_patients"
        type="hidden"
        value="20"
      />
      <input
        name="max_members"
        type="hidden"
        value="10"
      />
    </div>
    <div
      class="flex justify-end gap-3"
    >
      <button
        class="inline-flex items-center justify-center rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none ring-offset-background bg-primary text-primary-foreground hover:bg-primary/90 h-10 py-2 px-4"
        type="submit"
      >
        Criar Grupo
      </button>
    </div>
  </form>
</DocumentFragment>
`;

exports[`GroupForm Snapshot Tests matches snapshot with loading state 1`] = `
<DocumentFragment>
  <form
    class="space-y-6"
  >
    <div
      class="space-y-4"
    >
      <div>
        <label
          class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
          for="name"
        >
          Nome do Grupo *
        </label>
        <input
          class="flex h-12 w-full rounded-md border border-input bg-background px-4 py-3 text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50"
          id="name"
          name="name"
          placeholder="Nome do grupo"
          required=""
          value=""
        />
      </div>
      <div>
        <label
          class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
          for="description"
        >
          Descrição
        </label>
        <textarea
          class="flex min-h-[80px] w-full rounded-md border border-input bg-transparent px-3 py-2 text-sm ring-offset-background placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50"
          id="description"
          name="description"
          placeholder="Descrição do grupo"
          rows="3"
        />
      </div>
      <input
        name="max_patients"
        type="hidden"
        value="20"
      />
      <input
        name="max_members"
        type="hidden"
        value="10"
      />
    </div>
    <div
      class="flex justify-end gap-3"
    >
      <button
        class="inline-flex items-center justify-center rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none ring-offset-background bg-primary text-primary-foreground hover:bg-primary/90 h-10 py-2 px-4"
        type="submit"
      >
        Criar Grupo
      </button>
    </div>
  </form>
</DocumentFragment>
`;

exports[`GroupForm Snapshot Tests matches snapshot with success state 1`] = `
<DocumentFragment>
  <form
    class="space-y-6"
  >
    <div
      class="space-y-4"
    >
      <div>
        <label
          class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
          for="name"
        >
          Nome do Grupo *
        </label>
        <input
          class="flex h-12 w-full rounded-md border border-input bg-background px-4 py-3 text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50"
          id="name"
          name="name"
          placeholder="Nome do grupo"
          required=""
          value=""
        />
      </div>
      <div>
        <label
          class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
          for="description"
        >
          Descrição
        </label>
        <textarea
          class="flex min-h-[80px] w-full rounded-md border border-input bg-transparent px-3 py-2 text-sm ring-offset-background placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50"
          id="description"
          name="description"
          placeholder="Descrição do grupo"
          rows="3"
        />
      </div>
      <input
        name="max_patients"
        type="hidden"
        value="20"
      />
      <input
        name="max_members"
        type="hidden"
        value="10"
      />
    </div>
    <div
      class="flex justify-end gap-3"
    >
      <button
        class="inline-flex items-center justify-center rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none ring-offset-background bg-primary text-primary-foreground hover:bg-primary/90 h-10 py-2 px-4"
        type="submit"
      >
        Criar Grupo
      </button>
    </div>
  </form>
</DocumentFragment>
`;
